2009-09-05 Alexandru Csete <oz9aec at gmail.com>

    * src/sat-pass-dialogs.c:
    Implemented double click in multi-pass table will show the details of the
    clicked pass.


2009-10-03 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sat-selector-c:
    Added proper cell rendering of Epoch field.


2009-09-27 Alexandru Csete <oz9aec at gmail.com>

    * src/tle-update.c:
    Synchronise satellite categories during TLE update.

    * src/gtk-sky-at-glance.c:
    Fixed bug 2691499: Sky at glance crashes with empty module.

    * src/sat-cfg.[ch]:
    * src/config-keys.h:
    Addd configuration flag for automatically showing the sky tracks in
    the Polar views.

    * src/gtk-polar-view.[ch]:
    Added support for automatically showing the sky tracks.

    * src/gtk-sat-module-tmg.c:
    Disabled tooltip since it was too annoying when using the scroll wheel.

    * src/sat-pref-polar-view.c:
    Added config widget for new sky track option.


2009-09-25 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sat-module-tmg.c:
    Finished implementation of the slider. It allows dragging of the time
    +/- 5 hours with a resolution of 8 seconds. It is complementary to the
    spin buttons.


2009-09-24 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sat-selector.c:
    Fixed a bug that caused tree models to be deleted when selecting a new
    satellite group.

    * src/mod-cfg.c:
    Added list of selected satellites and arrow buttons. New satellite selector
    is now fully functional and replaces GtkSatTree.

    * src/gtk-sat-tree.[ch]:
    Removed from build list.


2009-09-23 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sat-selector.[ch]:
    Changed EPOCH column type to G_TYPE_DOUBLE (consistent with sat_t).
    Implemented "sat-activated" signal that is triggered when the user
    double click on a satellite.

    * src/mod-cfg.c:
    Connect GtkSatSelector's new "sat-activated" signal to signal handler.

